# src/swagger.json
@@ -5724,6 +5724,18 @@
 							"schema": {
 								"type": "object",
 								"properties": {
+									"userName": {
+										"type": "string",
+										"description": "The unique username of the user."
+									},
+									"firstName": {
+										"type": "string",
+										"description": "The first name of the user."
+									},
+									"lastName": {
+										"type": "string",
+										"description": "The last name of the user."
+									},
 									"email": {
 										"type": "string",
 										"format": "email",
@@ -5733,12 +5745,16 @@
 										"type": "string",
 										"description": "The user's password."
 									},
-									"captchaToken": {
+									"confirmPassword": {
+										"type": "string",
+										"description": "The confirmation of the user's password."
+									},
+									"recaptchaToken": {
 										"type": "string",
 										"description": "The CAPTCHA token generated by the client."
 									}
 								},
-								"required": ["email", "password", "captchaToken"]
+								"required": ["userName", "firstName", "lastName", "email", "password", "confirmPassword", "recaptchaToken"]
 							}
 						}
 					}
